--- a/superset/datasources.yml
+++ b/superset/datasources.yml
@@ -1,9 +1,7 @@
 databases:
 - database_name: ds4fnp
-  extra: "{\r\n    \"metadata_params\": {},\r\n    \"engine_params\": {},\r\n    \"\
-    metadata_cache_timeout\": {},\r\n    \"schemas_allowed_for_csv_upload\": []\r\n\
-    }"
-  sqlalchemy_uri: postgresql+psycopg2://ds4fnp:ds4fnp@localhost:5432/ds4fnp
+  extra: '{"allows_virtual_table_explore":true,"metadata_params":{},"engine_params":{},"schemas_allowed_for_csv_upload":[]}'
+  sqlalchemy_uri: postgresql+psycopg2://ds4fnp:ds4fnp@127.0.0.1:5432/ds4fnp
   tables:
   - columns:
     - column_name: year
