testing target-duckdb

--- a/meltano/meltano.yml
+++ b/meltano/meltano.yml
@@ -6,71 +6,71 @@ plugins:
   - name: tap-spreadsheets-anywhere
     variant: original
     pip_url: git+https://github.com/ets/tap-spreadsheets-anywhere.git
-    capabilities:
-    - catalog
-    - discover
-    - state
     config:
       tables:
       - path: https://dataverse.harvard.edu/api/access/datafile/
         name: mit__house_elections
-        pattern: "4202836"
+        pattern: '4202836'
         start_date: '2010-01-01T00:00:00Z'
         key_properties: []
         format: csv
         delimiter: "\t"
       - path: https://dataverse.harvard.edu/api/access/datafile/
         name: mit__senate_elections
-        pattern: "4300300"
+        pattern: '4300300'
         start_date: '2010-01-01T00:00:00Z'
         key_properties: []
         format: csv
         delimiter: "\t"
       - path: https://dataverse.harvard.edu/api/access/datafile/
         name: mit__president_elections
-        pattern: "4299753"
+        pattern: '4299753'
         start_date: '2010-01-01T00:00:00Z'
         key_properties: []
         format: csv
         delimiter: "\t"
+    capabilities:
+    - catalog
+    - discover
+    - state
   - name: tap-csv
     variant: meltano
     pip_url: git+https://gitlab.com/meltano/tap-csv.git
     config:
       files:
-        - entity: kgl__governors_county_candidate
-          file: ../data/kaggle/governors_county_candidate.csv
-          keys: []
-        - entity: kgl__governors_county
-          file: ../data/kaggle/governors_county.csv
-          keys: []
-        - entity: kgl__governors_state
-          file: ../data/kaggle/governors_state.csv
-          keys: []
-        - entity: kgl__house_candidates
-          file: ../data/kaggle/house_candidates.csv
-          keys: []
-        - entity: kgl__house_state
-          file: ../data/kaggle/house_state.csv
-          keys: []
-        - entity: kgl__president_county_candidate
-          file: ../data/kaggle/president_county_candidate.csv
-          keys: []
-        - entity: kgl__president_county
-          file: ../data/kaggle/president_county.csv
-          keys: []
-        - entity: kgl__president_state
-          file: ../data/kaggle/president_state.csv
-          keys: []
-        - entity: kgl__senate_county_candidate
-          file: ../data/kaggle/senate_county_candidate.csv
-          keys: []
-        - entity: kgl__senate_county
-          file: ../data/kaggle/senate_county.csv
-          keys: []
-        - entity: kgl__senate_state
-          file: ../data/kaggle/senate_state.csv
-          keys: []
+      - entity: kgl__governors_county_candidate
+        file: ../data/kaggle/governors_county_candidate.csv
+        keys: []
+      - entity: kgl__governors_county
+        file: ../data/kaggle/governors_county.csv
+        keys: []
+      - entity: kgl__governors_state
+        file: ../data/kaggle/governors_state.csv
+        keys: []
+      - entity: kgl__house_candidates
+        file: ../data/kaggle/house_candidates.csv
+        keys: []
+      - entity: kgl__house_state
+        file: ../data/kaggle/house_state.csv
+        keys: []
+      - entity: kgl__president_county_candidate
+        file: ../data/kaggle/president_county_candidate.csv
+        keys: []
+      - entity: kgl__president_county
+        file: ../data/kaggle/president_county.csv
+        keys: []
+      - entity: kgl__president_state
+        file: ../data/kaggle/president_state.csv
+        keys: []
+      - entity: kgl__senate_county_candidate
+        file: ../data/kaggle/senate_county_candidate.csv
+        keys: []
+      - entity: kgl__senate_county
+        file: ../data/kaggle/senate_county.csv
+        keys: []
+      - entity: kgl__senate_state
+        file: ../data/kaggle/senate_state.csv
+        keys: []
   loaders:
   - name: target-postgres
     pip_url: git+https://github.com/meltano/target-postgres.git
@@ -79,3 +79,10 @@ plugins:
       host: 127.0.0.1
       port: 5432
       dbname: ds4fnp
+  - name: target-duckdb
+    namespace: target_duckdb
+    pip_url: git+https://github.com/jwills/target-duckdb.git
+    executable: target-duckdb
+    config:
+      filepath: load/db.duckdb
+      schema: $MELTANO_EXTRACT__LOAD_SCHEMA
