--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ author: Andrew Stewart
 # logo: logo.png
 execute:
   execute_notebooks: off
-exclude_patterns: [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints", .venv]
+only_build_toc_files: true
+exclude_patterns: [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints", .venv, "meltano/.meltano/**"]
 repository:
   url: https://github.com/andrewcstewart/ds4fnp
 html:
